[project]
name = "comfyui-extensions"
description = "Extensions: subgraph, setget, multiReroute"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/diffus3/ComfyUI-extensions"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-extensions"
Icon = ""
